# SEJ-ODE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
demos/: ode_data.csv  plot_ode_data.ipynb  test_alpha.cc  test_newmark.cc  test_ode.cc
mass_spring/: CMakeLists.txt  bind_mass_spring.cc  mass_spring.cc  mass_spring.h  mass_spring.ipynb  test_mass_spring.py
mass_spring/.ipynb_checkpoints/: mass_spring-checkpoint.ipynb  mass_spring_playground-checkpoint.ipynb
src/: CMakeLists.txt  Newton.h  nonlinfunc.h  ode.h
